bad/bin_op_and_void_bool.example_compiler_output
ERROR
[1mbad/bin_op_and_void_bool.lat:4:8: [1;31merror: [0;1moperator && is defined only for `boolean` values, not `void` and `boolean`[m
	foo() && true;
	      [1;32m^[m
